--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -1,4 +1,18 @@
-@import "tailwindcss";
+@font-face {
+  font-family: 'Playfair Display';
+  src: url('/fonts/PlayfairDisplay-Regular.ttf') format('truetype');
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Playfair Display';
+  src: url('/fonts/PlayfairDisplay-Bold.ttf') format('truetype');
+  font-weight: 700;
+  font-style: normal;
+}
+
+@import 'tailwindcss';
 
 body {
   overflow-y: scroll;
