--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -16,4 +16,8 @@
 
 body {
   overflow-y: scroll;
+  background-image: url('../images/bgr/bgr-body.png');
+  background-repeat: repeat;
+  background-size: auto;
+  background-position: top left;
 }
