--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -12,6 +12,19 @@
   font-style: normal;
 }
 
+:root {
+  --main: #101828;
+  --text: #475467;
+
+  --button: #993333;
+  --button-hover: #d84343;
+
+  --rating: #ffc531;
+  --inputs: #f7f7f7;
+
+  --white: #fff;
+}
+
 @import 'tailwindcss';
 
 body {
@@ -20,4 +33,43 @@ body {
   background-repeat: repeat;
   background-size: auto;
   background-position: top left;
+}
+
+/* WebKit browsers (Chrome, Edge Chromium, Safari) */
+*::-webkit-scrollbar {
+  width: 8px;
+  height: 8px;
+}
+
+*::-webkit-scrollbar-track {
+  background: #f0f0f0;
+  border-radius: 4px;
+}
+
+*::-webkit-scrollbar-thumb {
+  background: rgba(255, 255, 255, 0.2);
+  border-radius: 7px;
+  height: 120px;
+  min-height: 30px;
+  transition: background 0.2s ease;
+}
+
+*::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
+
+*::-webkit-scrollbar-thumb::before {
+  content: '';
+  display: block;
+  height: 100%;
+  min-height: 30px;
+  max-height: 120px;
+  border-radius: 7px;
+  background: rgba(255, 255, 255, 0.2);
+}
+
+/* Firefox */
+* {
+  scrollbar-width: thin;
+  scrollbar-color: var(--default) #f0f0f0;
 }
