--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -47,11 +47,11 @@ body {
 }
 
 *::-webkit-scrollbar-thumb {
-  background: rgba(255, 255, 255, 0.2);
+  background: rgba(255, 255, 255, 0.5);
   border-radius: 7px;
   height: 120px;
   min-height: 30px;
-  transition: background 0.2s ease;
+  transition: all 0.2s ease;
 }
 
 *::-webkit-scrollbar-thumb:hover {
