--- a/src/components/DataPicker/DateRangePicker/DateRangePicker.css
+++ b/src/components/DataPicker/DateRangePicker/DateRangePicker.css
@@ -5,14 +5,13 @@
 
 .date-range-picker .drp-input {
   width: 100%;
-  height: 48px;
-  padding: 12px 40px 12px 14px;
-  border-radius: 10px;
+  padding: 10px 40px 10px 10px;
+  border-radius: 8px;
   border: 1px solid rgba(16, 24, 40, 0.2);
   background-color: var(--inputs);
   color: var(--main);
   outline: none;
-  transition: all 0.2s ease;
+  transition: border-color 0.5s ease;
 }
 
 .date-range-picker .drp-input:hover {
@@ -32,23 +31,32 @@
   cursor: pointer;
   color: var(--main);
   font-size: 18px;
+  transition: color 0.5s ease;
+}
+
+.date-range-picker .drp-icon:hover {
+  color: var(--button);
 }
 
 .date-range-picker .drp-calendar,
 .date-range-picker .react-datepicker {
-  border-radius: 12px;
+  border-radius: 8px;
   border: 1px solid rgba(16, 24, 40, 0.25);
   overflow: hidden;
 }
 
+.date-range-picker .react-datepicker__day {
+  transition: background-color 0.5s ease;
+}
+
 .date-range-picker .react-datepicker__day:hover {
-  border-radius: 12%;
+  border-radius: 50%;
   background-color: var(--button);
   color: white;
 }
 
 .date-range-picker .react-datepicker__day--selected {
   background-color: var(--button);
-  border-radius: 12%;
+  border-radius: 50%;
   color: white;
 }
