--- a/src/components/DataPicker/DateRangePicker/DateRangePicker.css
+++ b/src/components/DataPicker/DateRangePicker/DateRangePicker.css
@@ -7,7 +7,7 @@
   width: 100%;
   padding: 10px 40px 10px 10px;
   border-radius: 8px;
-  border: 1px solid rgba(16, 24, 40, 0.2);
+  border: 1px solid rgba(16, 24, 40, 0.1);
   background-color: var(--inputs);
   color: var(--main);
   outline: none;
@@ -15,12 +15,12 @@
 }
 
 .date-range-picker .drp-input:hover {
-  border-color: rgba(16, 24, 40, 0.4);
+  border-color: rgba(16, 24, 40, 0.3);
 }
 
 .date-range-picker .drp-input:focus {
   border-color: var(--button);
-  box-shadow: 0 0 0 3px rgba(153, 51, 51, 0.2);
+  box-shadow: 0 0 0 2px rgba(153, 51, 51, 0.2);
 }
 
 .date-range-picker .drp-icon {
@@ -50,13 +50,20 @@
 }
 
 .date-range-picker .react-datepicker__day:hover {
-  border-radius: 50%;
+  border-radius: 24%;
   background-color: var(--button);
   color: white;
 }
 
 .date-range-picker .react-datepicker__day--selected {
   background-color: var(--button);
-  border-radius: 50%;
+  border-radius: 24%;
   color: white;
+}
+
+.date-range-picker .react-datepicker__day--today {
+  border: 1px solid var(--button);
+  background-color: white;
+  border-radius: 24%;
+  font-weight: 600;
 }
