Edit Arch filter form

--- a/src/components/MultySelector/MultySelector.module.css
+++ b/src/components/MultySelector/MultySelector.module.css
@@ -1,6 +1,12 @@
 .container {
   display: flex;
   flex-direction: column;
+  gap: 2px;
+}
+
+.wrapper {
+  display: flex;
+  flex-direction: column;
   gap: 6px;
 }
 
