--- a/src/components/DataPicker/DateRangePicker/DateRangePicker.css
+++ b/src/components/DataPicker/DateRangePicker/DateRangePicker.css
@@ -5,7 +5,7 @@
 
 .date-range-picker .drp-input {
   width: 100%;
-  padding: 10px 40px 10px 10px;
+  padding: 6px 30px 6px 6px;
   border-radius: 8px;
   border: 1px solid rgba(16, 24, 40, 0.1);
   background-color: var(--inputs);
@@ -66,4 +66,10 @@
   background-color: white;
   border-radius: 24%;
   font-weight: 600;
+}
+
+@media screen and (max-width: 768px) {
+  .date-range-picker .drp-input {
+    padding: 10px 40px 10px 10px;
+  }
 }
