--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -23,6 +23,9 @@
   --inputs: #f7f7f7;
 
   --white: #fff;
+  --scrollbar-track: #f5f5f5;
+  --scrollbar-thumb: rgba(153, 51, 51, 0.45);
+  --scrollbar-thumb-hover: rgba(153, 51, 51, 0.9);
 }
 
 @import 'tailwindcss';
@@ -35,41 +38,29 @@ body {
   background-position: top left;
 }
 
-/* WebKit browsers (Chrome, Edge Chromium, Safari) */
 *::-webkit-scrollbar {
   width: 8px;
   height: 8px;
 }
 
 *::-webkit-scrollbar-track {
-  background: #f0f0f0;
+  background: var(--scrollbar-track);
   border-radius: 4px;
 }
 
 *::-webkit-scrollbar-thumb {
-  background: rgba(255, 255, 255, 0.5);
+  background: var(--scrollbar-thumb);
   border-radius: 7px;
-  height: 120px;
   min-height: 30px;
-  transition: all 0.2s ease;
+  transition: background 0.5s ease;
 }
 
 *::-webkit-scrollbar-thumb:hover {
-  background: #555;
+  background: var(--scrollbar-thumb-hover);
 }
 
-*::-webkit-scrollbar-thumb::before {
-  content: '';
-  display: block;
-  height: 100%;
-  min-height: 30px;
-  max-height: 120px;
-  border-radius: 7px;
-  background: rgba(255, 255, 255, 0.2);
-}
-
-/* Firefox */
+/* --- Firefox --- */
 * {
   scrollbar-width: thin;
-  scrollbar-color: var(--default) #f0f0f0;
+  scrollbar-color: var(--scrollbar-thumb) var(--scrollbar-track);
 }
